[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-nodejs-version>=0.3.2"]

[project]
authors = [
  {name = "Vizro Team"}
]
classifiers = [
  "Framework :: Dash",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "dash>=3.0.0"
]
description = "Vizro Dash Components are used by the Vizro framework but can be used in a pure Dash app"
dynamic = ["version"]
license-files = {paths = ["LICENSE.txt"]}
name = "vizro-dash-components"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/mckinsey/vizro"

[tool.hatch.version]
source = "nodejs"
