[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "plotly>=6.0.1",
  "pytest>=8.3.5"
]

[project]
authors = [
  {name = "Vizro Team"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.28.1",
  "mcp[cli]>=1.6.0",
  "vizro>=0.1.37",
  "click>=8.1.7"
]
description = "Vizro MCP server to facilitate chart and dashboard generation"
license-files = {paths = ["LICENSE.txt"]}
name = "vizro-mcp"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
"vizro-mcp" = "vizro_mcp.cli:main"

[tool.coverage.paths]
vizro = ["src/vizro_mcp"]  # omit tests for clarity, although this can be useful to see what test lines DID NOT run

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["vizro_mcp"]
