[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Vizro Team"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
# Core dependencies - no MCP framework required
dependencies = [
  "httpx>=0.28.1",
  "vizro>=0.1.46",
  "pandas[html,parquet,excel]"
]
description = "Core validation library and MCP server for Vizro dashboards and charts"
dynamic = ["version"]
license-files = {paths = ["LICENSE.txt"]}
name = "vizro-mcp"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
# Full installation with all features
all = [
  "vizro-mcp[mcp]"
]
# MCP server functionality - install with: pip install vizro-mcp[mcp]
mcp = [
  "mcp[cli]>=1.6.0",
  "click>=8.1.7"
]

[project.scripts]
"vizro-mcp" = "vizro_mcp:main"

[tool.coverage.paths]
vizro = ["src/vizro_mcp"]  # omit tests for clarity, although this can be useful to see what test lines DID NOT run

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
fail_under = 62
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["vizro_mcp"]

[tool.pytest.ini_options]
addopts = [
  # Allow test files to have the same name in different directories.
  "--import-mode=importlib"
]
filterwarnings = [
  "error"
]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
# Examples use print statements and may have simpler docstrings
"examples/**" = ["T201", "D103"]
