[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Vizro Team"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "vizro>=0.1.32",
  "dash-extensions",
  "python-dotenv>=0.21.0"
]
description = 'Vizro Chat Component that provides chat functionality for Vizro dashboards.'
keywords = []
name = "brix.vizro_chat_component"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["vizro_chat_component"]

[tool.pytest.ini_options]
addopts = [
  # Allow test files to have the same name in different directories.
  "--import-mode=importlib"
]

[tool.setuptools.package-data]
vizro_chat_component = ["assets/*.js"]
